# oak

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFESTO.md  README.md  STRUCTURE.md
.github/ISSUE_TEMPLATE/: generate-arazzo-spec.md  import-openapi-to-oak.md
.github/workflows/: auto-arazzo.yaml  import-openapi-to-oak.yaml  jentic-sdk-pypi.yaml  oak-runner-pypi.yaml
tools/: README.md
tools/jentic-mcp/: .gitignore  .windsurfrules  CLAUDE.md  README.md  pyproject.toml
tools/jentic-mcp/design/: developer-workflow-sequence-diagram.md  jentic-prod-architecture.md
tools/jentic-mcp/scripts/: __init__.py  run_real_integration_test.py  test_agent_runtime_integration.py
tools/jentic-mcp/src/: __init__.py
tools/jentic-mcp/src/mcp/: __init__.py  config.py  handlers.py  main.py  plugin.py  tools.py  version.py
tools/jentic-mcp/src/mcp/adapters/: __init__.py  mcp.py
tools/jentic-mcp/src/mcp/core/generators/: __init__.py  code_generator.py  code_samples.py  docs_generator.py
tools/jentic-mcp/src/mcp/mock/: __init__.py  mock_data_generator.py  providers.py  search_matcher.py  workflow_scanner.py
tools/jentic-mcp/src/mcp/transport/: __init__.py  base.py  http.py  stdio.py
tools/jentic-mcp/tests/: __init__.py  test_mcp_integration.py
tools/jentic-mcp/tests/mcp/core/generators/: __init__.py  test_code_generator.py
tools/jentic-mcp/tests/mock_data/: api_client.py  requirements.txt  spotify_client.py  tools.py
tools/jentic-mcp/tests/mock_data/json/: generate_prompt_library.json  generate_runtime.json
tools/jentic-sdk/: CODING_AGENT.md  README.md  pyproject.toml
tools/jentic-sdk/design/: server_openapi.json
tools/jentic-sdk/src/jentic/: __init__.py  jentic.py  models.py
tools/jentic-sdk/src/jentic/agent_runtime/: __init__.py  agent_tools.py  config.py  tool_execution.py  tool_specs.py
tools/jentic-sdk/src/jentic/api/: __init__.py  api_cache.py  api_hub.py
tools/jentic-sdk/tests/: __init__.py
tools/jentic-sdk/tests/agent_runtime/: __init__.py  test_agent_runtime.py  test_agent_tools.py  test_config.py  test_project.py  test_tool_execution.py  test_tool_specs.py
tools/jentic-sdk/tests/api/: test_api_cache.py  test_api_hub.py
tools/oak-runner/: .gitignore  README.md  components.md  pyproject.toml
tools/oak-runner/src/oak_runner/: __init__.py  __main__.py  evaluator.py  executor.py  http.py  models.py  runner.py  utils.py
tools/oak-runner/src/oak_runner/auth/: __init__.py  auth_parser.py  auth_processor.py  default_credential_provider.py  models.py
tools/oak-runner/src/oak_runner/executor/: __init__.py  action_handler.py  operation_finder.py  output_extractor.py  parameter_processor.py  server_processor.py  step_executor.py  success_criteria.py
tools/oak-runner/src/oak_runner/extractor/: openapi_extractor.py
tools/oak-runner/tests/: README.md  __init__.py  base_test.py  debug_fixture.py  run_real_tests.py  test_arazzo_runner.py  test_env_mappings.py  test_evaluator.py  test_fixture_discovery.py  test_framework_demo.py  test_http_client.py  test_models.py  test_utils.py  test_workflow_execution_result.py
tools/oak-runner/tests/auth/: test_auth_parser.py  test_auth_processor.py  test_default_credential_provider.py  test_security_requirements.py
tools/oak-runner/tests/executor/: test_execute_operation_with_server_vars.py  test_operation_finder.py  test_parameter_processor.py  test_server_processor.py  test_step_executor.py
tools/oak-runner/tests/extractor/: test_openapi_extractor.py
tools/oak-runner/tests/fixtures/: __init__.py
tools/oak-runner/tests/fixtures/bnpl/: bnpl-arazzo.yaml  test_config.yaml
tools/oak-runner/tests/fixtures/discord/: discord.arazzo.yaml  test_config.yaml
tools/oak-runner/tests/fixtures/example_real_mode/: test_config.yaml
tools/oak-runner/tests/fixtures/newyork_times/: newyork_times.arazzo.yaml  test_config.yaml
tools/oak-runner/tests/fixtures/pet_coupons/: pet-coupons.arazzo.yaml  pet-coupons.openapi.yaml  test_config.yaml
tools/oak-runner/tests/fixtures/sample_login_workflow/: login_api.yaml  login_workflow.yaml  test_config.yaml
tools/oak-runner/tests/fixtures/sample_test/: example_api.yaml  example_workflow.yaml  test_config.yaml
tools/oak-runner/tests/fixtures/spotify/: spotify.arazzo.yaml  spotify.auth.openapi.yaml  test_config.yaml
tools/oak-runner/tests/fixtures/train/: test_config.yaml  train.arazzo.yaml  train.openapi.yaml
tools/oak-runner/tests/fixtures/xkcd/: test_config.yaml  xkcd.arazzo.yaml
tools/oak-runner/tests/mocks/: __init__.py  http_client.py  openapi_mocker.py  real_http_client.py
workflows/1password.com~events/: workflows.arazzo.json
workflows/1password.local~connect/: workflows.arazzo.json
workflows/agco-ats.com/: workflows.arazzo.json
workflows/apache.org~airflow/: workflows.arazzo.json
workflows/apache.org~qakka/: workflows.arazzo.json
workflows/apacta.com/: workflows.arazzo.json
workflows/apideck.com~accounting/: workflows.arazzo.json
workflows/apideck.com~connector/: workflows.arazzo.json
workflows/apideck.com~crm/: workflows.arazzo.json
workflows/apideck.com~customer-support/: workflows.arazzo.json
workflows/apideck.com~ecommerce/: workflows.arazzo.json
workflows/apideck.com~ecosystem/: workflows.arazzo.json
workflows/apideck.com~hris/: workflows.arazzo.json
workflows/apideck.com~issue-tracking/: workflows.arazzo.json
(+7228 files in other folders)
